force-app/main/default/objects/uNI_Milestone__c/uNI_Milestone__c.object-meta.xml
<CustomObject>
    <label>Milestone</label>
    <nameField>
        <displayFormat>MI-{0000}</displayFormat>
        <label>Milestone Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Milestones</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>