force-app/main/default/objects/uNI_Milestone__c/fields/uNI_BehindSchedule__c.field-meta.xml
<CustomField>
    <fullName>uNI_BehindSchedule__c</fullName>
    <formula>AND(
    TODAY() &gt; uNI_Milestone_Date__c,
    ISPICKVAL(uNI_Status__c, &quot;Completed&quot;) = FALSE
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Behind Schedule</label>
    <type>Checkbox</type>
</CustomField>