force-app/main/default/objects/uNI_Milestone__c/fields/uNI_Comments__c.field-meta.xml
<CustomField>
    <fullName>uNI_Comments__c</fullName>
    <label>Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>