force-app/main/default/objects/uNI_Milestone__c/fields/uNI_Comments_from_Implementer_Year2__c.field-meta.xml
<CustomField>
    <fullName>uNI_Comments_from_Implementer_Year2__c</fullName>
    <label>Comments from Implementer</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>