force-app/main/default/objects/uNI_Milestone__c/fields/uNI_CompletionDate__c.field-meta.xml
<CustomField>
    <fullName>uNI_CompletionDate__c</fullName>
    <label>Completion Date</label>
    <type>Date</type>
</CustomField>