force-app/main/default/objects/uNI_Milestone__c/fields/uNI_Description__c.field-meta.xml
<CustomField>
    <fullName>uNI_Description__c</fullName>
    <label>Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>