force-app/main/default/objects/uNI_Milestone__c/fields/uNI_LogframeVersion__c.field-meta.xml
<CustomField>
    <fullName>uNI_LogframeVersion__c</fullName>
    <description>value of LogframeVersion same as value of LogframeVersion in logframe object to handle the versioning</description>
    <label>Logframe Version</label>
    <length>100</length>
    <type>Text</type>
</CustomField>