force-app/main/default/objects/uNI_Milestone__c/fields/uNI_Milestone_Date__c.field-meta.xml
<CustomField>
    <fullName>uNI_Milestone_Date__c</fullName>
    <label>Milestone Date</label>
    <type>Date</type>
</CustomField>