force-app/main/default/objects/uNI_Milestone__c/fields/uNI_Milestone_Heading__c.field-meta.xml
<CustomField>
    <fullName>uNI_Milestone_Heading__c</fullName>
    <label>Milestone Heading</label>
    <type>TextArea</type>
</CustomField>