force-app/main/default/objects/uNI_Milestone__c/fields/uNI_Milestone_Title__c.field-meta.xml
<CustomField>
    <fullName>uNI_Milestone_Title__c</fullName>
    <label>Milestone Title</label>
    <type>TextArea</type>
</CustomField>