force-app/main/default/objects/uNI_Milestone__c/fields/uNI_Outcome__c.field-meta.xml
<CustomField>
    <fullName>uNI_Outcome__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Outcome</label>
    <referenceTo>uNI_PortfolioOutcomes__c</referenceTo>
    <relationshipLabel>Milestones</relationshipLabel>
    <relationshipName>Milestones</relationshipName>
    <type>Lookup</type>
</CustomField>