force-app/main/default/objects/uNI_Milestone__c/fields/uNI_Output__c.field-meta.xml
<CustomField>
    <fullName>uNI_Output__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Output</label>
    <referenceTo>uNI_PortfolioOutput__c</referenceTo>
    <relationshipLabel>Milestones</relationshipLabel>
    <relationshipName>Milestones</relationshipName>
    <type>Lookup</type>
</CustomField>