force-app/main/default/objects/uNI_Milestone__c/fields/uNI_Revised_Due_Date_Year11__c.field-meta.xml
<CustomField>
    <fullName>uNI_Revised_Due_Date_Year11__c</fullName>
    <label>Revised Due Date</label>
    <type>Date</type>
</CustomField>