force-app/main/default/objects/uNI_Milestone__c/fields/uNI_Status__c.field-meta.xml
<CustomField>
    <fullName>uNI_Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>Significant progress</fullName>
            </value>
            <value>
                <fullName>Limited progress</fullName>
            </value>
            <value>
                <fullName>Not started</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>